# rust_url_getter

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
