[package]
name = "url"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
once_cell = "1.19"

[profile.dev]
incremental = true
codegen-units = 16
lto = false
debug = true
opt-level = 0

[profile.release]
incremental = false
codegen-units = 16
lto = "thin"
opt-level = 3
strip = "debuginfo"
